--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,6 @@ background-color:goldenrod;
 }
 
 .dish {
-    border: 1px solid #ccc;
     padding: 20px;
     text-align: center;
 }
@@ -37,8 +36,9 @@ width:250px;
 heigth:auto;
 border-radius:5px;
 margin:5px;
-
-
+border-top:1px solid white;
+border-left:0.2px solid white;
+box-shadow:2px 2px 2px black;
 }
 iframe{
 border-radius:7px;
