--- a/public/style.css
+++ b/public/style.css
@@ -7,8 +7,7 @@ body {
     font-family: Arial, sans-serif;
     margin:0;
     padding:0;
-background-color:goldenrod;
-
+    background-color:rgba(255,122,233,0.3);
 }
 
 .dish {
@@ -28,17 +27,15 @@ text-align:center;
 font-family: "Rubik Scribble", system-ui;
   font-weight: 400;
   font-style: normal;
-text-shadow:5px 5px 1px #777;
 
 }
 img{
 width:250px;
 heigth:auto;
-border-radius:5px;
+border-radius:7px;
 margin:5px;
 border-top:1px solid white;
 border-left:0.2px solid white;
-box-shadow:2px 2px 2px black;
 }
 iframe{
 border-radius:7px;
@@ -54,6 +51,7 @@ nav{
 ul,li{
 display:flex;
 margin:10px;
+color:yellow;
 }
 main{
 position:relative;
